saved plot to file

--- a/electorate_regions_seats_difference.ipynb
+++ b/electorate_regions_seats_difference.ipynb
@@ -458,6 +458,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# End notes and limitations of the analysis\n",
+    "\n",
+    "- All parties were treated as individuals: no alliances were taken into accouns\n",
+    "- Others (\"Muut\" in Finnish) contains many non-party runners, most notably mr. Hjallis Harkimo (and his son). They gained a noteworthy pot of votes, but this group contains other more fringe groups, so it is not accurate representation\n",
+    "- Established parties benefit from the current electoral region system\n",
+    "- Small groups, and the Green party lose: Greens ought to have 3 more seats, and hence relatively more importance in the parliament"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
