--- a/electorate_regions_seats_difference.ipynb
+++ b/electorate_regions_seats_difference.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -415,21 +415,26 @@
        "0                      0.0  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "seats_table=pd.DataFrame({\"Seats by current system\": seats,\"Seats if no regions\":seats_if_no_regions, \"Percentage\": percentage, \"Difference in seats\": seats_if_no_regions-seats})\n",
-    "print(\"It is noteworthy, that \\\"Muut\\\" (Others) contains multiple parties, which were not aligned\")\n",
-    "seats_table.sort_values(\"Seats by current system\",ascending=False)\n",
-    "\n"
+    "seats_table.sort_values(\"Seats by current system\",ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is noteworthy, that \"Muut\" (Others) contains multiple parties, which were not aligned"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +459,8 @@
     "plt.xticks(rotation=90)\n",
     "plt.legend(loc='center left', bbox_to_anchor=(1, 0.5))\n",
     "plt.grid()\n",
-    "plt.show()"
+    "plt.savefig('seats_barchart.png')\n",
+    "plt.show()\n"
    ]
   },
   {
